test/corpus/L1/negative/radix-no-digits.st
"---
kind: negative
section: error.radix-no-digits
codes: E_RADIX_NO_DIGITS
---"
16r
